test/expected/k_declare_i.out
struct S; declare S as int
         ^
10: error: "S": previously declared as type: typedef struct S S
